fix dark mode

--- a/src/scss/theme/dark/page.scss
+++ b/src/scss/theme/dark/page.scss
@@ -171,6 +171,7 @@
     .list {
         .item:hover, .item.active { background: $colorHover; }
         .item {
+            .name { color: $colorSecondary; }
             .icon.arrow { background-image: url('~img/theme/dark/arrow/historyList.svg'); }
         }
     }
